# mcpi-reborn-extended

./: .deepsource.toml  .gitignore  .gitmodules  .update-internal.sh.swp  CMakeLists.txt  CNAME  InRelease  LATEST_CHANGELOG  LATEST_RELEASE  LICENSE  Packages  README.md  Release  Release.gpg  VERSION  install.sh  photorec.ses  pterodactyl.json  uninstall.sh  update-internal.sh  update-internal.sh.save  update.sh
bullseye-debs/: InRelease  KEY.gpg  Packages  Release  Release.gpg  gmcpil_0.11.0_armhf.deb  libmodpi_0.4.0-1.deb  mcpi-central_0.2.1-1_stretch.deb  mcpi-revival.list  minecraft-pi-reborn-client_2.0.1~bullseye_amd64.deb  minecraft-pi-reborn-client_2.0.2~bullseye_amd64.deb  minecraft-pi-reborn-client_2.0.2~bullseye_armhf.deb  minecraft-pi-reborn-client_2.0.3~bullseye_amd64.deb  minecraft-pi-reborn-client_2.0.3~bullseye_armhf.deb  minecraft-pi-reborn-client_2.0.4~bullseye_amd64.deb  minecraft-pi-reborn-client_2.0.4~bullseye_arm64.deb  minecraft-pi-reborn-client_2.0.4~bullseye_armhf.deb  minecraft-pi-reborn-server_2.0.1~bullseye_amd64.deb  minecraft-pi-reborn-server_2.0.1~bullseye_armhf.deb  minecraft-pi-reborn-server_2.0.2~bullseye_amd64.deb  minecraft-pi-reborn-server_2.0.2~bullseye_armhf.deb  minecraft-pi-reborn-server_2.0.3~bullseye_amd64.deb  minecraft-pi-reborn-server_2.0.3~bullseye_armhf.deb  minecraft-pi-reborn-server_2.0.4~bullseye_amd64.deb  minecraft-pi-reborn-server_2.0.4~bullseye_arm64.deb  minecraft-pi-reborn-server_2.0.4~bullseye_armhf.deb
cmake/: base-toolchain.cmake  embed-resource.cmake  prebuilt-armhf-toolchain.cmake  util.cmake
debian/: client-amd64  client-arm64  client-armhf  postinst  server-amd64  server-arm64  server-armhf
debs/: .Release.swp  InRelease  KEY.gpg  Packages  Release  Release.gpg  gmcpil0.11.deb  gmcpil_0.10.0_armhf.deb  (+194 more)
dependencies/zenity/src/: .gitignore  CMakeLists.txt
dependencies/zenity/src/src/: .gresource.xml  entry.c  main.c  option.c  option.h  text.c  tree.c  util.c  util.h  zenity.h  zenity.ui
images/: CMakeLists.txt
(+296 files in other folders)
